# soleil

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.py
data_for_tests/: base_resolvers.solconf
data_for_tests/loader/: as_dict.solconf  with_custom_type.solconf  with_explicit_unpromotion.solconf  with_no_promotion.solconf  with_promotion.solconf
data_for_tests/ref/: fxn_resolution.solconf  operators.solconf  ref.solconf
data_for_tests/solconf_module_tests/: main.solconf  reqs.solconf  subscripting.solconf
data_for_tests/solconfarg/: seasons.solconf
docs/: Makefile  requirements.txt
docs/source/: cli_overrides_discussion.rst  conf.py  constants.py  getting_started.rst  index.rst  todo.rst
scripts/: solex
soleil/: __init__.py  _utils.py  dict_container.py  injected.py  nodes.py  package.py  rcall.py  rstr.py  solconf.py  utils.py
soleil/cli_tools/: __init__.py  solconfarg.py  solex.py  solex_decorator.py
soleil/loader/: __init__.py  loader.py  override.py  pre_processor.py
soleil/overrides/: overridable.py  overrides.py  parser.py  req.py  variable_path.py
soleil/resolvers/: base.py  class_resolver.py  modifiers.py  module_resolver.py  ref.py  req.py  setter.py
soleil/solconf/: __init__.py  autonamed_pattern.py  cli_tools.py  containers.py  datetime_functions.py  dict_container.py  exceptions.py  functions.py  modification_heuristics.py  modifiers.py  nodes.py  numpy.py  parser.py  resolving_node.py  solconf.py  utils.py  utils2.py  varnames.py
soleil_examples/: setup.py
tests/: __init__.py  helpers.py  pytest.ini
(+139 files in other folders)
