# pyproject.toml

[build-system]
requires      = ["setuptools", "wheel"] # Tested with setuptools=68.2.2
build-backend = "setuptools.build_meta"

[project]
name = "soleil"
version = "1.0.0"
description = "Lucid configurations"
readme = "README.md"
authors = [{ name = "Joaquin Zepeda", email = "jazs.pro@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["configurations", "inheritable", "machine learning"]
dependencies = [
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/<TBD>"

[project.scripts]
#realpython = "reader.__main__:main"
solex = 'solex'
